--- a/module_07/data/quiz-data_knowledge_check_on_reading.json
+++ b/module_07/data/quiz-data_knowledge_check_on_reading.json
@@ -12,7 +12,7 @@
     "allowPartial": true,
     "randomize": true,
     "subtractWrong": false,
-    "preQuizText": "",
+    "preQuizText": "This activity is for the School of Technology & IT",
     "preQuizMedia": "none",
     "postQuizText": "none",
     "postQuizMedia": []
