--- a/module_07/data/quiz-data_knowledge_check_on_reading_school_of_health.json
+++ b/module_07/data/quiz-data_knowledge_check_on_reading_school_of_health.json
@@ -12,7 +12,7 @@
     "allowPartial": true,
     "randomize": true,
     "subtractWrong": false,
-    "preQuizText": "This activity is for the School of Health & Life Sciences and Community Services",
+    "preQuizText": "For the following questions, choose the best answer.",
     "preQuizMedia": "none",
     "postQuizText": "none",
     "postQuizMedia": []
